--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Lucas Fúrio Franco",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   }
 }
