--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "digi_start": "nodemon -L --inspect=0.0.0.0 index.js",
     "test": "echo \"testing\""
   },
   "author": "Lucas Fúrio Franco",
